added companies scaffold

--- a/app/views/domains/index.html.erb
+++ b/app/views/domains/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Psychedelic Domain Names: Historic Sales Database</h1>
 
-<h2> Total sales: <%= @domains.sum(:price) %> </h2>
+<h2> Total sales: $<%= @domains.sum(:price) %>0 </h2>
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
