--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,6 +19,9 @@
             <li class="nav-item">
         <%= link_to 'New Sale', new_domain_path, class:"nav-link" %>
       </li>
+      <li class="nav-item">
+        <%= link_to 'New Company', new_company_path, class:"nav-link" %>
+      </li>
 
 <% else %>
                 <li class="nav-item">
@@ -27,7 +30,9 @@
 
       <% end %>
 
-
+<li class="nav-item">
+        <%= link_to 'Companies', companies_path, class:"nav-link" %>
+      </li>
 
 
 
